# diff_patch

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mik/bspatch/: ApkUtils.java  DownLoadUtils.java  MainActivity.java  MikPatchAndDiff.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
